--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,22 +9,27 @@ body{
     background-color: #010B13;
 }
 .preguntasContainer{
-    width: 100vw;
-    height: 90vh;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 .pregunta{
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-    width: 800px;
-    height: 700px;
+    width: 600px;
+    height: 800px;
+    margin: 30px 0;
 }
 .opciones{
     text-align: center;
 }
 .preguntaHeader{
     padding: 30px;
+}
+.pContainer{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 10px;
 }
 header{
     background-color: #021520;
@@ -39,7 +44,7 @@ header{
     font-weight: 700;
     letter-spacing: 1px;
 }
-button{
+.btn{
     width: 90%;
     height: 60px;
     margin: 10px 0;
@@ -48,6 +53,7 @@ button{
     border: 1px solid transparent;
     font-size: 20px;
     cursor: pointer;
+    border-radius: 10px;
     &:hover{
         background-color: #F2A007;
         color: #010B13;
@@ -71,4 +77,28 @@ img{
 .preguntaTitle{
     color:#fff;
     text-align: center;
+}
+#contador{
+    color:#fff ;
+    font-size: 35px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.juegoContainer{
+    height: 90vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.juegoH1{
+    width: 350px;
+    height: 100px;
+    border-radius: 24px;
+    background-color: #F2A007;
+    font-size: 30px;
+    border: none;
+    cursor: pointer;
+    &:hover{
+        color: #fff;
+        background-color: #0A2F45;
+    }
 }
